--- a/config/database.yml
+++ b/config/database.yml
@@ -1,12 +1,19 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: my_development
+  database: development_new
   pool: 5
 
 
 test:
   adapter: postgresql
   encoding: unicode
-  database: my_test
+  database: test_new
   pool: 5
+  
+production:
+  adapter: postgresql
+  database: production_new
+  pool: 5
+  timeout: 5000
+
